@@ -17,7 +17,7 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.stream.Collectors;
-// En HotelServiceImpl.java
+
 @Service
 @RequiredArgsConstructor
 public class HotelServiceImpl implements HotelService {
@@ -25,34 +25,26 @@ public class HotelServiceImpl implements HotelService {
     private final DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
 
     private final HotelRepository hotelRepository;
-    private final BookingRepository bookingRepository;
     private final HotelMapper hotelMapper;
-    private final BookingMapper bookingMapper;
 
     @Override
     public List<HotelResponseDTO> findAllHotels() {
         List<Hotel> hotels = hotelRepository.findAll();
         return hotels.stream()
-                     .map(hotelMapper::toResponseDTO)
-                     .collect(Collectors.toList());
-    }
-
-   @Override
-    public List<HotelResponseDTO> findAllHotelsByDateAndPlace(String availableFrom, String availableTo, String place){
-        List<Hotel> hotels = hotelRepository.findAll();
-        return hotels.stream().filter(hotel -> 
-            hotel.getAvailableFrom().isBefore(LocalDate.parse(availableFrom, dateFormatter)) &&
-            hotel.getAvailableTo().isAfter(LocalDate.parse(availableTo, dateFormatter)) &&
-            hotel.getPlace().equals(place)).map(hotelMapper::toResponseDTO)
-            .toList();
-    
+                .map(hotelMapper::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public BookingResponseDTO makeReservationHotel(BookingRequestDTO bookingRequestDTO){
-        Booking booking = bookingMapper.toEntity(bookingRequestDTO);
-        Booking save = bookingRepository.save(booking);
+    public List<HotelResponseDTO> findAllHotelsByDateAndPlace(String availableFrom, String availableTo, String place) {
+        List<Hotel> hotels = hotelRepository.findAll();
+        return hotels.stream()
+                .filter(hotel -> hotel.getAvailableFrom().isBefore(LocalDate.parse(availableFrom, dateFormatter)) &&
+                        hotel.getAvailableTo().isAfter(LocalDate.parse(availableTo, dateFormatter)) &&
+                        hotel.getPlace().equals(place))
+                .map(hotelMapper::toResponseDTO)
+                .toList();
 
-        return bookingMapper.toResponseDTO(save, bookingRequestDTO);
     }
+
 }
